# mlops-retailrocket-gru4rec

./: .env  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: retailrocket.yaml
configs/eval/: default.yaml
configs/export/: default.yaml
configs/infer/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: gru4rec.yaml
configs/serve/: default.yaml
configs/train/: default.yaml
data/raw/: ecommerce-dataset.zip.dvc
retailrocket_gru4rec/: commands.py  utils.py
retailrocket_gru4rec/data/: dataset.py  download.py  preprocess.py
retailrocket_gru4rec/evaluation/: offline.py
retailrocket_gru4rec/inference/: predictor.py
retailrocket_gru4rec/models/: gru4rec.py
retailrocket_gru4rec/serving/: mlflow_pyfunc.py
retailrocket_gru4rec/training/: callbacks.py  data_module.py  lit_module.py  metrics.py
scripts/: convert_tensorrt.sh
