[tool.poetry]
name = "mlops-retailrocket-gru4rec"
version = "0.1.0"
description = "Lightweight sequential recommender (GRU4Rec-style) on RetailRocket dataset"
authors = ["Artem Remnev remnev.artem01@gmail.com"]
readme = "README.md"
packages = [{ include = "retailrocket_gru4rec" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
torch = "^2.3.1"
pytorch-lightning = "^2.3.3"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
mlflow = "^2.14.2"
tqdm = "^4.66.4"
fire = "^0.6.0"
matplotlib = "^3.9.0"
kaggle = "^1.6.14"
dvc = {extras = ["s3"], version = "^3.65.0"}
dvc-gdrive = "^3.0.1"
pyopenssl = ">=23.2.0"
onnxscript = "^0.5.7"
onnxruntime = "^1.23.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
onnxruntime = "^1.23.2"
dvc = "^3.66.0"

[tool.poetry.scripts]
rrgr = "retailrocket_gru4rec.commands:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
